--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
 <body>
     <h1>Welcome to My Page</h1>
     <p>This is a simple HTML page.</p>
+    <p>It is hosted on a web server.</p>
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+        </tr>
+        <tr>
+            <td>Jane</td>
+            <td>Smith</td>
+        </tr>
 </body>
 </html>
