--- a/index.html
+++ b/index.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Number Table</title>
+    <style>
+        table {
+            width: 50%;
+            border-collapse: collapse;
+            margin: 20px auto;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        a {
+            text-decoration: none;
+            color: blue;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Page</h1>
-    <p>This is a simple HTML page.</p>
-    <p>It is hosted on a web server.</p>
-    <table>
+
+<table>
+    <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Number</th>
+            <th>Link</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>101</td>
+            <td><a href="#">Link 101</a></td>
         </tr>
         <tr>
-            <td>John</td>
-            <td>Doe</td>
+            <td>102</td>
+            <td><a href="#">Link 102</a></td>
         </tr>
         <tr>
-            <td>Jane</td>
-            <td>Smith</td>
+            <td>103</td>
+            <td><a href="#">Link 103</a></td>
         </tr>
+        <tr>
+            <td>104</td>
+            <td><a href="#">Link 104</a></td>
+        </tr>
+        <tr>
+            <td>105</td>
+            <td><a href="#">Link 105</a></td>
+        </tr>
+        <tr>
+            <td>106</td>
+            <td><a href="#">Link 106</a></td>
+        </tr>
+        <tr>
+            <td>201</td>
+            <td><a href="#">Link 201</a></td>
+        </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
