--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Table</title>
+    <title>Number Tables</title>
     <style>
         table {
             width: 50%;
@@ -27,6 +27,7 @@
 <body>
 
 <table>
+    <caption>1. Semester</caption>
     <thead>
         <tr>
             <th>Number</th>
@@ -58,12 +59,153 @@
             <td>106</td>
             <td><a href="#">Link 106</a></td>
         </tr>
+    </tbody>
+</table>
+
+<table>
+    <caption>2. Semester</caption>
+    <thead>
+        <tr>
+            <th>Number</th>
+            <th>Link</th>
+        </tr>
+    </thead>
+    <tbody>
         <tr>
             <td>201</td>
             <td><a href="#">Link 201</a></td>
         </tr>
+        <tr>
+            <td>202</td>
+            <td><a href="#">Link 202</a></td>
+        </tr>
+        <tr>
+            <td>203</td>
+            <td><a href="#">Link 203</a></td>
+        </tr>
+        <tr>
+            <td>204</td>
+            <td><a href="#">Link 204</a></td>
+        </tr>
+        <tr>
+            <td>205</td>
+            <td><a href="#">Link 205</a></td>
+        </tr>
+        <tr>
+            <td>206</td>
+            <td><a href="#">Link 206</a></td>
+        </tr>
     </tbody>
 </table>
+
+<table>
+    <caption>3. Semester</caption>
+    <thead>
+        <tr>
+            <th>Number</th>
+            <th>Link</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>301</td>
+            <td><a href="#">Link 301</a></td>
+        </tr>
+        <tr>
+            <td>302</td>
+            <td><a href="#">Link 302</a></td>
+        </tr>
+        <tr>
+            <td>303</td>
+            <td><a href="#">Link 303</a></td>
+        </tr>
+        <tr>
+            <td>304</td>
+            <td><a href="#">Link 304</a></td>
+        </tr>
+        <tr>
+            <td>305</td>
+            <td><a href="#">Link 305</a></td>
+        </tr>
+        <tr>
+            <td>306</td>
+            <td><a href="#">Link 306</a></td>
+        </tr>
+    </tbody>
+</table>
+
+<table>
+    <caption>4. Semester</caption>
+    <thead>
+        <tr>
+            <th>Number</th>
+            <th>Link</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>401</td>
+            <td><a href="#">Link 401</a></td>
+        </tr>
+        <tr>
+            <td>402</td>
+            <td><a href="#">Link 402</a></td>
+        </tr>
+        <tr>
+            <td>403</td>
+            <td><a href="#">Link 403</a></td>
+        </tr>
+        <tr>
+            <td>404</td>
+            <td><a href="#">Link 404</a></td>
+        </tr>
+        <tr>
+            <td>405</td>
+            <td><a href="#">Link 405</a></td>
+        </tr>
+        <tr>
+            <td>406</td>
+            <td><a href="#">Link 406</a></td>
+        </tr>
+    </tbody>
+</table>
+<table>
+    <caption>5. Semester</caption>
+    <thead>
+        <tr>
+            <th>Number</th>
+            <th>Link</th>
+        </tr>
+    </thead>    
+    <tbody>
+        <tr>
+            <td>501</td>
+            <td><a href="#">Link 401</a></td>
+        </tr>
+        <tr>
+            <td>502</td>
+            <td><a href="#">Link 402</a></td>
+        </tr>
+        <tr>
+            <td>503</td>
+            <td><a href="#">Link 403</a></td>
+        </tr>
+        <tr>
+            <td>504</td>
+            <td><a href="#">Link 404</a></td>
+        </tr>
+        <tr>
+            <td>505</td>
+            <td><a href="#">Link 405</a></td>
+        </tr>
+    </tbody>
+
+    </tbody>
+</table>
+
+</body>
+</html>
+
 
 </body>
 </html>
