--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <h3>BCSM-401</h3>
             <p>Materialien:
                 <ul>
-                <li><a href="Schwachstellen_Zusammenfassung.html">Lecture 3 Video</a></li>
+                <li><a href="Schwachstellen_Zusammenfassung.html">Zusammenfassung der Schwachstellen - SS2024</a></li>
                 </ul>
             </p>
         </article>
