--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             <h3>BCSM-402</h3>
             <p>Materialien:
                 <ul>
+                <li><a href="BCM_Zusammenfassung.html">BCM - SS2024</a></li>
 
                 </ul>
             </p>
@@ -258,7 +259,7 @@
             <h3>BCSM-404</h3>
             <p>Materialien:
                 <ul>
-
+                <li><a href="Anwendungssysteme_Zusammenfassung.html">Anwendungssysteme - SS2024</a></li>
                 </ul>
             </p>
             <h3>BCSM-405</h3>
