--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Here's the cleaned-up HTML code with unnecessary `\n` removed and the structure fixed:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +11,7 @@ Here's the cleaned-up HTML code with unnecessary `\n` removed and the structure 
             padding: 0;
             background-color: #f5f5f5;
             color: #333;
+            transition: background-color 0.3s, color 0.3s;
         }
         header {
             background-color: #007fff;
@@ -68,8 +66,29 @@ Here's the cleaned-up HTML code with unnecessary `\n` removed and the structure 
         a:hover {
             text-decoration: underline;
         }
+        .dark-mode {
+            background-color: #333;
+            color: #f5f5f5;
+        }
+        .dark-mode header {
+            background-color: #005bb5;
+        }
+        .dark-mode footer {
+            background-color: #005bb5;
+        }
+        .dark-mode section {
+            background-color: #444;
+            color: #f5f5f5;
+        }
+        .dark-mode a {
+            color: #66b2ff;
+        }
     </style>
 </head>
+<body>
+    <header>
+        <h1>BCSM Materialsammlung</h1>
+        <button id="toggle-dark-mode">Toggle Dark Mode</button>
 <body>
     <header>
         <h1>BCSM Materialsammlung</h1>
